data/derived/comb/progs/unify/prog7128.ml.out
Characters 58-70:
  else bigAdd l (mulByDigit i-1 l);;
                 ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
